tests/baselines/reference/twoInterfacesDifferentRootModule2.errors.txt
==== tests/cases/compiler/twoInterfacesDifferentRootModule2.ts (4 errors) ====
    // two interfaces with different root modules should not merge
    
    module M {
        export interface A {
            foo: string;
        }
    
        export interface B<T> {
            foo: T;
        }
    
        module M2 {
            export interface A {
                bar: number;
            }
    
            var a: A;
            var r1 = a.foo; // error
                       ~~~
!!! twoInterfacesDifferentRootModule2.ts(18,20): error TS2094: The property 'foo' does not exist on value of type 'A'.
            var r2 = a.bar;
    
            export interface B<T> {
                bar: T;
            }
    
            var b: B<string>;
            var r3 = b.foo; // error
                       ~~~
!!! twoInterfacesDifferentRootModule2.ts(26,20): error TS2094: The property 'foo' does not exist on value of type 'B<string>'.
            var r4 = b.bar;
        }
    
        var a: A;
        var r1 = a.foo; 
        var r2 = a.bar; // error
                   ~~~
!!! twoInterfacesDifferentRootModule2.ts(32,16): error TS2094: The property 'bar' does not exist on value of type 'A'.
    
        var b: B<string>;
        var r3 = b.foo; 
        var r4 = b.bar; // error
                   ~~~
!!! twoInterfacesDifferentRootModule2.ts(36,16): error TS2094: The property 'bar' does not exist on value of type 'B<string>'.
    }